src/ir/ir_macro/snapshots/lumina2__ir__ir_macro__test__mul_numbers.snap
---
source: src/ir/ir_macro/mod.rs
expression: "ir!\n{\n    let _0: u8; let _1: u8; let _2: u8; bb0:\n    { _1 = const 2_u8; _2 = const 3_u8; _0 = Mul(_1, _2); return; }\n}"
---
Body {
    ctx: Ctx {
        tys: IndexedVec(
            [
                U8,
            ],
            PhantomData<fn() -> lumina2::ir::value::Ty>,
        ),
    },
    basic_blocks: IndexedVec(
        [
            BasicBlockData {
                statements: [
                    Assign {
                        place: Place {
                            local: Local(
                                Key(
                                    1,
                                ),
                            ),
                            projection: [],
                        },
                        rvalue: Use(
                            Constant(
                                U8(
                                    2,
                                ),
                            ),
                        ),
                    },
                    Assign {
                        place: Place {
                            local: Local(
                                Key(
                                    2,
                                ),
                            ),
                            projection: [],
                        },
                        rvalue: Use(
                            Constant(
                                U8(
                                    3,
                                ),
                            ),
                        ),
                    },
                    Assign {
                        place: Place {
                            local: Local(
                                Key(
                                    0,
                                ),
                            ),
                            projection: [],
                        },
                        rvalue: BinaryOp {
                            op: Mul,
                            lhs: Place(
                                Place {
                                    local: Local(
                                        Key(
                                            1,
                                        ),
                                    ),
                                    projection: [],
                                },
                            ),
                            rhs: Place(
                                Place {
                                    local: Local(
                                        Key(
                                            2,
                                        ),
                                    ),
                                    projection: [],
                                },
                            ),
                        },
                    },
                ],
                terminator: Return,
            },
        ],
        PhantomData<fn() -> lumina2::ir::BasicBlock>,
    ),
    local_decls: IndexedVec(
        [
            LocalDecl {
                ty: Ty(
                    Key(
                        0,
                    ),
                ),
            },
            LocalDecl {
                ty: Ty(
                    Key(
                        0,
                    ),
                ),
            },
            LocalDecl {
                ty: Ty(
                    Key(
                        0,
                    ),
                ),
            },
        ],
        PhantomData<fn() -> lumina2::ir::Local>,
    ),
    arg_count: 0,
}
